# geo-rasterize

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: CI.yml  rust.yml
benches/: us-county-2018.fgb  versus-gdal.rs
proptest-regressions/: proptests.txt
src/: lib.rs  line.rs  poly.rs  proptests.rs
src/tests/: mod.rs  utils.rs
